[package]
name = "ratatui-image"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false }
ratatui = { version = "0.27", default-features = false }

[dev-dependencies]
ratatui = { version = "0.27", features = ["crossterm"] }

[features]
default = ["avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"]
avif = ["image/avif"]
bmp = ["image/bmp"]
dds = ["image/dds"]
exr = ["image/exr"]
ff = ["image/ff"] # Farbfeld image format
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png = ["image/png"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]
